# 7-division

./: .coderabbit.yaml  .gitignore  .mcp.json.bak  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TESTING_COMPLETE.md  TESTING_README.md  TESTS_ADDED.md  TEST_GENERATION_SUMMARY.md  TEST_SUMMARY.md  better-sqlite3-ci-fix.md  package-lock.json  package.json  pnpm-lock.yaml  test-wasm.mjs  webmcp-test.js
.github/workflows/: ci.yml  (+3 more)
cad-electron/: electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  test-main.js  test-main2.js  tsconfig.json  tsconfig.node.json
cad-engine/: Cargo.toml
cad-engine/src/: lib.rs
cad-engine/src/primitives/: line.rs  mod.rs
cad-engine/src/scene/: entity.rs  groups.rs  mod.rs  path_parser.rs  primitives.rs  query.rs  style.rs  transforms.rs  z_order.rs
cad-engine/src/serializers/: json.rs  mod.rs  svg.rs
cad-tools/: cad-agent.ts  cad-cli.ts  draw-house.ts  generate-scene.ts  package-lock.json  package.json  run-agent.ts  tool-requests.json
docs/: ai-native-cad-proposal-v2.md  ai-native-cad-proposal.md  ai_native_cad_unified.html  architecture.md  ax-design-guide.md  cad-mcp-guide.md  cad-sandbox-workflow.md  claude-code-usage.md  epics.md  installation.md  page_mockup.html  page_mockup_light.html  page_mockup_v2.html  page_mockup_v2_light.html  prd.md  ux-design-specification.md  web-architecture.md
scripts/: draw-floor-plan.js
viewer/: TEST_README.md  index.html  package-lock.json  package.json  renderer.js  renderer.test.js  selection.json  server.cjs  tsconfig.json  vite.config.ts
(+447 files in other folders)
